--- a/ai-assistant-openai/finetuning-api.ipynb
+++ b/ai-assistant-openai/finetuning-api.ipynb
@@ -5,9 +5,9 @@
    "id": "35e77e94-a5ee-4e86-bc1d-d4f652d04953",
    "metadata": {},
    "source": [
-    "# OpenAI Fine-tuning API - YouTube Comment Responder\n",
+    "# OpenAI Fine-tuning API \n",
     "\n",
-    "Code authored by: Shaw Talebi <br>\n",
+    "Code authored by:Md Al Amin Tokder  <br>\n",
     "Video link: https://youtu.be/4RAvJt3fWoI <br>\n",
     "Article link: https://medium.com/towards-data-science/how-to-build-an-ai-assistant-with-openai-python-8b3b5a636f69?sk=af65504536ca6b977a4a993ecd2e80e8 <br>"
    ]
