--- a/langchain-example/automatic_grader-example.ipynb
+++ b/langchain-example/automatic_grader-example.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Example Code: Automatic Grader\n",
     "\n",
-    "Code authored by: Shawhin Talebi <br>\n",
+    "Code authored by: Md Al  Amin Tokder  <br>\n",
     "Blog link: https://medium.com/towards-data-science/prompt-engineering-how-to-trick-ai-into-solving-your-problems-7ce1ed3b553f"
    ]
   },
