--- a/openai-api/openai-api-demo.ipynb
+++ b/openai-api/openai-api-demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Cracking Open the OpenAI API\n",
     "\n",
-    "Code authored by: Shawhin Talebi"
+    "Code authored by: alamin tokder"
    ]
   },
   {
