--- a/qlora/create-dataset.ipynb
+++ b/qlora/create-dataset.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Creating HF Dataset for Mistral Fine-tuning\n",
     "\n",
-    "Code authored by: Shaw Talebi <br>\n",
+    "Code authored by: alamin <br>\n",
     "Video link: https://youtu.be/XpoKB3usmKc <br>\n",
     "Blog link: https://medium.com/towards-data-science/qlora-how-to-fine-tune-an-llm-on-a-single-gpu-4e44d6b5be32 <br>\n",
     "<br>\n",
